--- a/08-La_sape_de_dingue/index.html
+++ b/08-La_sape_de_dingue/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="La sape de dingue est un site e-commerce où vous pouvez acheter des produits vestimentaires insolites et originales. Découvrez notre boutique en ligne de prêt-à-porter où l'originalité et l'audace sont à l'honneur. Explorez des vêtements et accessoires uniques, décalés et hors du commun pour exprimer votre style avec audace. Trouvez des pièces rares et surprenantes qui feront tourner les têtes. Soyez différent, soyez vous-même avec notre collection insolite !"
+    />
+    <meta
+      name="keywords"
+      content="la sape de dingue, prêt-à-porter insolite, vêtements décalés, mode originale, accessoires uniques, vêtements audacieux, mode hors du commun, pièces rares, style unique, vêtements surprenants, prêt-à-porter créatif, mode excentrique, mode atypique, tendances décalées, vêtements avant-gardistes, fashion insolite"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,83 +36,7 @@
     <title>La sape de dingue | Accueil</title>
   </head>
   <body>
-    <!-- <div class="container">
-      <header class="header">
-        <a href="" class="link__logo">
-          <h1 class="title__h1">Ma boutique</h1>
-        </a>
-      </header>
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="" class="nav__link">Home</a>
-          </li>
-          <li class="nav__item">
-            <a href="" class="nav__link">Panier</a>
-          </li>
-        </ul>
-      </nav>
-      <main class="main__product">
-        <h2 class="title__h2">Chapeau</h2>
-
-        <section class="product">
-          <img src="assets/images/products/chapeau.jpg" class="picture__product" alt="">
-          <div class="product__details">
-            <h3 class="title__product">Titre</h3>
-            <p class="product__price">19.99€</p>
-            <p class="product__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta odit esse a vitae nulla odio sapiente ut possimus quis nihil quam quasi, laudantium voluptates modi hic corrupti vero, eligendi nemo sit, aperiam facilis enim beatae quia! Magnam eaque porro debitis, beatae ex numquam expedita placeat facere ratione ad, labore dignissimos?</p>
-          </div>
-        </section>
-
-        <div class="cards">
-          <figure class="card">
-            <img src="assets/images/products/chapeau.jpg" alt="" class="card__picture" />
-            <figcaption class="card__legend">
-              <h3 class="title__h3">Produit 1</h3>
-              <a href="" class="card__link">Voir plus</a>
-            </figcaption>
-          </figure>
-          <figure class="card">
-            <img src="assets/images/products/chaussette.jpg" alt="" class="card__picture" />
-            <figcaption class="card__legend">
-              <h3 class="title__h3">Produit 1</h3>
-              <a href="" class="card__link">Voir plus</a>
-            </figcaption>
-          </figure>
-          <figure class="card">
-            <img src="assets/images/products/chaussure.jpg" alt="" class="card__picture" />
-            <figcaption class="card__legend">
-              <h3 class="title__h3">Produit 1</h3>
-              <a href="" class="card__link">Voir plus</a>
-            </figcaption>
-          </figure>
-          <figure class="card">
-            <img src="assets/images/products/pull.jpg" alt="" class="card__picture" />
-            <figcaption class="card__legend">
-              <h3 class="title__h3">Produit 1</h3>
-              <a href="" class="card__link">Voir plus</a>
-            </figcaption>
-          </figure>
-          <figure class="card">
-            <img src="assets/images/products/robe.jpg" alt="" class="card__picture" />
-            <figcaption class="card__legend">
-              <h3 class="title__h3">Produit 1</h3>
-              <a href="" class="card__link">Voir plus</a>
-            </figcaption>
-          </figure>
-          <figure class="card">
-            <img src="assets/images/products/tee-shirt.jpg" alt="" class="card__picture" />
-            <figcaption class="card__legend">
-              <h3 class="title__h3">Produit 1</h3>
-              <a href="" class="card__link">Voir plus</a>
-            </figcaption>
-          </figure>
-        </div>
-      </main>
-      <footer class="footer">
-        <p class="copyright">&copy; 2024 - Grégory LACROIX</p>
-      </footer>
-    </div> -->
+    <div class="container"></div>
 
     <script src="scripts/pages/index.js" type="module"></script>
   </body>
